--- a/index.html
+++ b/index.html
@@ -16,168 +16,8 @@
         </div>
       </section>
       <section class="currency-board">
-        <h2 id="currency-title">Values referring to 1 BRL</h2>
+        <h2 id="currency-title"></h2>
         <ul id="currency-list">
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
-          <li><img src="./src/assets/coin.svg" alt="coin logo">BRL <span>123.345</span></li>
         </ul>
       </section>
     </main>
